# snakeGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/game_engine/: Game.cpp  GameSettings.cpp  Snake.cpp  game.cpp  game_setting.cpp  game_settings.cpp  snake.cpp
src/headers/: Game.h  game.h  game_setting.h  game_settings.h  snake.h
